--- a/200515 - Promise/Promise-2 .html
+++ b/200515 - Promise/Promise-2 .html
@@ -47,32 +47,32 @@
     //   });
 
     // 一个promise后执行一个then
-    // let p1 = new Promise((resolve, reject) => {
-    //   resolve("success1");
-    //   // reject("fail1");
-    // })
-    //   .then(
-    //     (value) => {
-    //       console.log("成功" + value);
-    //       return new Promise((resolve, reject) => {
-    //         reject("fail2");
-    //       }).then(null, (r) => {
-    //         console.log(r);
-    //         return new Promise((resolve, reject) => {
-    //           reject("fail3");
-    //         });
-    //       });
-    //     },
-    //     (reason) => {
-    //       console.log(reason);
-    //     }
-    //   )
-    //   .then(
-    //     (value) => {},
-    //     (reason) => {
-    //       console.log(reason);
-    //     }
-    //   );
+    let p1 = new Promise((resolve, reject) => {
+      resolve("success1");
+      // reject("fail1");
+    })
+      .then(
+        (value) => {
+          console.log("成功" + value);
+          return new Promise((resolve, reject) => {
+            reject("fail2");
+          }).then(null, (r) => {
+            console.log(r);
+            return new Promise((resolve, reject) => {
+              reject("fail3");
+            });
+          });
+        },
+        (reason) => {
+          console.log(reason);
+        }
+      )
+      .then(
+        (value) => {},
+        (reason) => {
+          console.log(reason);
+        }
+      );
 
     // let p1 = new Promise((resolve, reject) => {
     //   // resolve("成功通知");
