--- a/3 - 200507 - String/2 - Math.html
+++ b/3 - 200507 - String/2 - Math.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>string</title>
+    <title>Math</title>
     <style></style>
   </head>
   <body></body>
@@ -10,9 +10,8 @@
     // Math方法获取最大值或者最小值
     // apply是传数组、call传一个一个值
     // ---------------------------------------------------
-    // let arr = [12, 3, 45, 56, 7, 3, 112];
-    // console.log(Math.max.apply(null, arr));
-    // console.log(Math.max.call(null, ...arr));
+    let arr = [12, 3, 45, 56, 7, 3, 112];
+    console.log(Math.max(...arr));
 
     // ------------------------------
     // 返回索引0-5
