--- a/4 - 200507 - Array/Array - 2截取查找排序.html
+++ b/4 - 200507 - Array/Array - 2截取查找排序.html
@@ -23,11 +23,11 @@
     // ------------------------------------
     // ------------------------------------
     // 数组首尾增删
-    // let arr = ["hdcms", "houdunren"];
+    let arr = ["hdcms", "houdunren"];
     // arr.unshift("压进去到第一个");
     // console.log(arr);
-    // arr.shift();
-    // console.log(arr); // 弹出第一个
+    // arr.shift(); // 弹出第一个
+    // console.log(arr);
     // arr.push("压到最后一个");
     // console.log(arr);
     // arr.pop(); //弹出最后一个
@@ -116,13 +116,13 @@
     // console.log(index);
 
     // 排序
-    let arr = [1, 2, 4, 5, 55, 67, 7, 8];
-    // arr = arr.sort((a, b) => a - b); //从小到大
-    arr = arr.sort((a, b) => {
-      console.log(a, b);
-      return b - a;
-    }); //从大到小
-    console.log(arr);
+    // let arr = [1, 2, 4, 5, 55, 67, 7, 8];
+    // // arr = arr.sort((a, b) => a - b); //从小到大
+    // arr = arr.sort((a, b) => {
+    //   console.log(a, b);
+    //   return b - a;
+    // }); //从大到小
+    // console.log(arr);
 
     // 排序实现原理
     // let arr = [1, 2, 4, 5, 55, 67, 7, 8];
