--- a/200511 - Object/Object -4proxy代理.html
+++ b/200511 - Object/Object -4proxy代理.html
@@ -23,7 +23,7 @@
     //     obj[key] = value;
     //   },
     // });
-    // // console.log(proxy.name);
+    // console.log(proxy.name);
     // proxy.name = "向军";
 
     // let lessons = [
@@ -47,7 +47,6 @@
     // ------------------------
     // 双向数据绑定
     // ------------------------
-      
     function View() {
       let proxy = new Proxy(
         {},
