--- a/200502 - function/function - 3call和apply和bind.html
+++ b/200502 - function/function - 3call和apply和bind.html
@@ -1,115 +1,99 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <title>function</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <title>function</title>
+  <body>
+    <button>hdcms.com</button>
+    <button>houdunren.com</button>
+  </body>
+  <script>
+    // 通过call改变构造函数的this，相当于把新对象压到构造函数里
+    // function User(name) {
+    //   this.name = name;
+    // }
+    // let lisi = new User("李四");
+    // console.log(lisi);
 
-</head>
+    // let hdcms = {
+    //   url: "hdcmd.com",
+    // };
+    // User.call(hdcms, "开源项目");
+    // console.log(hdcms);
 
-<body>
+    // call和apply和bind
+    // apply第二个参数传递是数组,call传递单个值
 
-  <!-- <button>hdcms.com</button>
-  <button>houdunren.com</button> -->
+    // ----------------------------------------------------------
+    // let lisi = {
+    //   name: "李四"
+    // }
+    // let wangwu = {
+    //   name: "王五"
+    // }
 
+    // function User(web, url) {
+    //   console.log(`${web}---${url}---${this.name}`)
+    // }
 
-</body>
-<script>
+    // User.call(lisi, "后盾人", "houdunren.com")
+    // User.apply(lisi, ["后盾人", "houdunren.com"])
 
-  // 通过calll改变构造函数的this，相当于把新对象压到构造函数里
-  // function User(name) {
-  //   this.name = name
+    // --------------------------------------------------------------
+    // 把对象传入call第一个函数,改变this的值
+    function show() {
+      alert(this.innerHTML);
+    }
 
-  // }
-  // let lisi = new User("李四")
-  // console.log(lisi)
+    // elem一个参数可以不加括号;
+    let buttons = document.querySelectorAll("button");
+    buttons.forEach((elem) => {
+      elem.addEventListener("click", (event) => {
+        show.call(event.target);
+      });
+    });
 
-  // let hdcms = {
-  //   url: "hdcmd.com"
-  // }
-  // User.call(hdcms, "开源项目")
-  // console.log(hdcms);
+    // 如果说没有...语法，需要传入数组，可以使用apply
+    // 等价于Math.max(...arr)
+    // let arr = [1, 2, 3, 45, 78];
+    // console.log(Math.max.apply(Math, arr));
+    // console.log(Math.max(...arr));
+    // ---------------------------------------
+    // 案例
+    function User() {
+      this.url = "user/lists";
+      Request.call(this);
+    }
+    function Article() {
+      this.url = "article/lists";
+      Request.call(this);
+    }
 
+    function Request() {
+      this.get = function (params) {
+        let str = Object.keys(params)
+          .map((k) => {
+            return `${k}=${params[k]}`;
+          })
+          .join("&");
+        let url = `https://houdunren.com?${this.url}/${str}`;
+        // console.log(url)
+        document.write(url + "<hr/>");
+      };
+    }
 
-  // call和apply和bind
-  // apply第二个参数传递是数组,call传递单个值
+    let user = new User();
+    user.get({
+      id: 2,
+      role: "admin",
+    });
 
-
-
-  // ----------------------------------------------------------
-  // let lisi = {
-  //   name: "李四"
-  // }
-  // let wangwu = {
-  //   name: "王五"
-  // }
-
-  // function User(web, url) {
-  //   console.log(`${web}---${url}---${this.name}`)
-  // }
-
-  // User.call(lisi, "后盾人", "houdunren.com")
-  // User.apply(lisi, ["后盾人", "houdunren.com"])
-
-
-
-
-  // --------------------------------------------------------------
-  // 把对象传入call第一个函数,改变this的值
-  function show() {
-    alert(this.innerHTML);
-  }
-
-  // elem一个参数可以不加括号
-  let buttons = document.querySelectorAll("button");
-  buttons.forEach((elem) => {
-    elem.addEventListener("click", (event) => {
-      show.call(event.target);
-    })
-  })
-
-
-  // // 如果说没有...语法，需要传入数组，可以使用apply
-  // // 等价于Math.max(...arr)
-  // let arr = [1, 2, 3, 45, 78]
-  // console.log(Math.max.apply(Math, arr))
-
-
-
-  // ---------------------------------------
-  // 案例
-  // function User() {
-  //   this.url = "user/lists";
-  //   Request.call(this);
-  // }
-  // function Article() {
-  //   this.url = "article/lists";
-  //   Request.call(this);
-  // }
-
-  // function Request() {
-  //   this.get = function (params) {
-  //     let str = Object.keys(params).map(k => {
-  //       return `${k}=${params[k]}`
-  //     }).join("&");
-  //     let url = `https://houdunren.com?${this.url}/${str}`
-  //     // console.log(url)
-  //     document.write(url + "<hr/>")
-  //   }
-  // }
-
-  // let user = new User();
-  // user.get({
-  //   id: 2,
-  //   role: "admin"
-  // })
-
-  // let a = new Article();
-  // a.get({
-  //   id: 1,
-  //   cat: "js"
-  // })
-
-</script>
-
+    // let a = new Article();
+    // a.get({
+    //   id: 1,
+    //   cat: "js",
+    // });
+  </script>
 </html>
