--- a/9 - 200427 - bibao/200427 - bibao - 1概念.html
+++ b/9 - 200427 - bibao/200427 - bibao - 1概念.html
@@ -4,8 +4,11 @@
     <title>闭包</title>
   </head>
   <body>
-    <button>按钮1</button>
-    <button>按钮2</button>
+    <div>1</div>
+    <div>2</div>
+    <div>3</div>
+    <div>4</div>
+    <div>5</div>
   </body>
   <script>
     // ------------------------------------------------------------------------------------------------------------
@@ -35,6 +38,7 @@
     //     // let web = "run --- 后盾人";
     //     console.log(web + "run");
     //   }
+    //   run();
     // }
     // show();
     // console.log(web);
